# auto_project

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  icon.rs  main.rs  utils.rs  windows_impl.rs
