[package]
name = "auto_project"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/wyatt-herkamp/auto_project"
authors = ["Wyatt Herkamp <wherkamp@gmail.com"]
description = "A tool creating shortcuts to your programming projects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.0"
serde = { version = "1", features = ["derive"] }
directories = "5"
human-panic = "1"
which = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
console = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
strum = { version = "0.25", features = ["derive"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
resvg = { version = "0.36" }
ico = "0.3.0"
usvg = "0.36.0"
tiny-skia = "0.11"
once_cell = "1.8.0"
[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Networking_WinSock",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls_Dialogs",
    "Win32_Networking_WinInet",
    "Foundation",
    "Foundation_Collections",
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_System_Variant",
    "UI_ViewManagement",
] }
